Ajuste no compilador maven, inclusão de manifest pelo eclipse.