@@ -128,6 +128,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+			        <release>${java.version}</release>
+			        <compilerArgs>--enable-preview</compilerArgs>
+			    </configuration>
             </plugin>
         </plugins>
     </build>
